complete assingment 03-flex-header-2. all correct. review align-items and ul margin and padding.

--- a/flex/02-flex-header/solution/solution.css
+++ b/flex/02-flex-header/solution/solution.css
@@ -39,3 +39,68 @@ ul {
   padding: 0;
   gap: 8px;
 }
+
+
+
+/* Here is my alternate solution. It works too. */
+
+.header  {
+  font-family: monospace;
+  background: papayawhip;
+  
+  display: flex;
+
+}
+
+.logo {
+  font-size: 48px;
+  font-weight: 900;
+  color: tomato;
+  background: white;
+  padding: 4px 32px;
+
+  margin: 5px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.left-links{
+  /*left-links pushed all the way to the left and right, and stay at the edge of the header when the page is resized.*/
+  margin-right: auto;
+
+}
+
+.right-links{
+/*right-links are pushed all the way to the left and right, and stay at the edge of the header when the page is resized.*/
+  margin-left: auto;
+
+}
+
+ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+
+  padding: 10px;
+
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  gap: 2em;
+
+
+}
+
+
+a {
+  font-size: 22px;
+  background: white;
+  padding: 8px;
+  /* this removes the line under the links */
+  text-decoration: none;
+
+}
+
+
