--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,10 +8,39 @@ body {
   font-family: Besley, serif;
 }
 
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  /*change header to flex so every flex items is laid horizontally*/
+  display: flex;
+
+  /*now everything will be centered horizontally*/
+  align-items: center;
+
+  /*this will give the side of the header 16px space*/
+  padding: 0 16px; 
+
+  justify-content: space-between;
+}
+
+.left-container{
+
+  display: flex;
+  align-items: center;
+  gap:16px;
+
+}
+
+.right-container{
+  display: flex;
+  gap: 8px;
+
+  /*this is interesting here, if you don't change it to center, the child flex item will stretch as tall as the tallest item */
+  align-items: center;
+
 }
 
 .profile-image {
@@ -45,4 +74,13 @@ a {
 
 ul {
   list-style-type: none;
+
+/*This will flatten the list into horizontal flex box with each link as its flex items*/
+
+  display: flex;
+
+  gap: 16px;
+
+  margin: 0;
+  padding: 0;
 }
